--- a/style/main.scss
+++ b/style/main.scss
@@ -40,9 +40,9 @@ body {
 }
 
 h1.title {
-  font-size: 80px;
+  font-size: 48px;
   font-weight: bold;
-  margin: 0;
+  margin: 16px 0;
   display: block;
   float: left;
 }
@@ -462,6 +462,13 @@ hr {
 }
 
 .restart-button {
+  @include button;
+  display: block;
+  text-align: center;
+  float: left;
+}
+
+.undo-button {
   @include button;
   display: block;
   text-align: center;
