--- a/style/main.css
+++ b/style/main.css
@@ -512,6 +512,34 @@ hr {
   text-align: center;
   float: right; }
 
+.load-button {
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  line-height: 42px;
+  display: block;
+  text-align: center;
+  float: right;
+  margin-right: 5px; }
+
+.save-button {
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  line-height: 42px;
+  display: block;
+  text-align: center;
+  float: right;
+  margin-right: 5px; }
+
 .game-explanation {
   margin-top: 50px; }
 
